--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^18.15.3",
+    "@types/pdf-parse": "^1.1.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "openai-api": "^1.3.1",
+    "pdf-parse": "^1.1.1"
+  }
 }
